[gd_scene load_steps=11 format=4 uid="uid://dptqv0l043tyw"]

[ext_resource type="Script" uid="uid://bnfs5pldu2cd0" path="res://levels/base_level.gd" id="1_ew5uy"]
[ext_resource type="PackedScene" uid="uid://dhd35o5m5lhrq" path="res://player/player.tscn" id="2_63c5o"]
[ext_resource type="TileSet" uid="uid://ca4fue5xq1fm2" path="res://levels/tilemaps/wall_tile_set.tres" id="2_p5284"]
[ext_resource type="PackedScene" uid="uid://b50ql2p2uq8a4" path="res://ui/cookie_loot_panel.tscn" id="3_63c5o"]
[ext_resource type="PackedScene" uid="uid://cbtlrnu6r3qxy" path="res://core/hideout/hideout.tscn" id="3_46036"]
[ext_resource type="PackedScene" uid="uid://crpqeph3siqhn" path="res://ui/inventory_panel.tscn" id="4_satuh"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ew5uy"]
light_mode = 2

[sub_resource type="LabelSettings" id="LabelSettings_ew5uy"]
font_size = 32
outline_size = 12
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_63c5o"]
font_size = 48
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_satuh"]
font_size = 48
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="BaseLevel" type="Node2D"]
script = ExtResource("1_ew5uy")
masked_by_player_vision_material = SubResource("CanvasItemMaterial_ew5uy")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.7, 0.7, 0.7, 1)

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true
autostart = true

[node name="MapRoot" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="FloorTileMapLayer" type="TileMapLayer" parent="MapRoot"]
texture_filter = 1
tile_set = ExtResource("2_p5284")
metadata/_edit_lock_ = true

[node name="WallTileMapLayer" type="TileMapLayer" parent="MapRoot"]
texture_filter = 1
tile_map_data = PackedByteArray("AAAQAAkAAAABAAMAAAAPAAkAAAABAAMAAAAOAAkAAAABAAMAAAANAAkAAAAHAAAAAAAMAAkAAAABAAMAAAALAAkAAAAGAAAAAAAKAAkAAAABAAMAAAAJAAkAAAAHAAQAAAAIAAkAAAAHAAAAAAAHAAkAAAABAAMAAAAGAAkAAAABAAMAAAAFAAkAAAABAAMAAAARAAwAAAADAAEAAAARAAsAAAADAAEAAAARAAoAAAADAAEAAAAFAA0AAAABAAMAAAAGAA0AAAABAAMAAAAHAA0AAAABAAMAAAAIAA0AAAABAAMAAAAJAA0AAAABAAMAAAAKAA0AAAABAAMAAAAEAAwAAAADAAEAAAAEAAsAAAADAAEAAAAEAAoAAAADAAEAAAALAA0AAAABAAMAAAAMAA0AAAABAAMAAAANAA0AAAABAAMAAAAOAA0AAAABAAMAAAAPAA0AAAABAAMAAAAQAA0AAAABAAMAAAARAA0AAAAFAAEAAAAEAA0AAAAHAAAAAAAEAAkAAAAHAAQAAAARAAkAAAAHAAEAAAAEAAgAAAADAAEAAAAEAAcAAAADAAEAAAAEAAYAAAAEAAAAAAAFAAYAAAAFAAEAAAAFAAUAAAAGAAAAAAAEAAUAAAABAAMAAAADAAUAAAABAAMAAAACAAUAAAABAAMAAAABAAUAAAAEAAAAAAABAAYAAAADAAEAAAABAAcAAAADAAEAAAABAAgAAAADAAEAAAABAAkAAAAGAAEAAAACAAkAAAABAAMAAAADAAkAAAABAAMAAAABAAoAAAADAAEAAAABAAsAAAADAAEAAAABAAwAAAADAAEAAAABAA0AAAAEAAEAAAACAA0AAAABAAMAAAADAA0AAAABAAMAAAARAAgAAAADAAEAAAARAAcAAAADAAEAAAARAAYAAAAFAAAAAAAQAAYAAAABAAMAAAAPAAYAAAABAAMAAAAOAAYAAAABAAMAAAANAAYAAAAEAAAAAAANAAcAAAAHAAEAAAANAAgAAAADAAEAAAALAAoAAAADAAEAAAALAAsAAAAFAAEAAAAKAAsAAAABAAMAAAAJAAsAAAAEAAEAAAAJAAoAAAADAAEAAAAIAAgAAAADAAEAAAAIAAcAAAADAAEAAAAIAAYAAAAFAAAAAAAHAAYAAAAEAAEAAAAHAAUAAAAFAAAAAAAGAAUAAAABAAMAAAAMAAcAAAABAAMAAAALAAcAAAABAAMAAAAKAAcAAAAEAAAAAAAKAAgAAAAFAAEAAAAJAAgAAAAEAAAAAAAGAAsAAAADAAMAAAAOAAsAAAADAAMAAAAPAAcAAAADAAAAAAAPAAgAAAADAAIAAAAPAAwAAAAAAAMAAAAQAAwAAAAFAAEAAAAQAAsAAAADAAAAAAAGAAwAAAAAAAMAAAAHAAwAAAACAAMAAAAHAAoAAAADAAMAAAAGAAgAAAADAAMAAAAfAAUAAAACAAEAAAAfAAQAAAACAAEAAAAfAAMAAAACAAEAAAAeAAUAAAABAAEAAAAeAAQAAAABAAEAAAAeAAMAAAABAAEAAAAdAAUAAAABAAEAAAAdAAQAAAABAAEAAAAdAAMAAAABAAEAAAAcAAUAAAABAAEAAAAcAAQAAAABAAEAAAAcAAMAAAABAAEAAAAbAAUAAAABAAEAAAAbAAQAAAABAAEAAAAbAAMAAAABAAEAAAAaAAUAAAABAAEAAAAaAAQAAAABAAEAAAAaAAMAAAABAAEAAAAZAAUAAAAFAAIAAAAZAAQAAAABAAEAAAAZAAMAAAABAAEAAAAYAAUAAAABAAIAAAAYAAQAAAABAAEAAAAYAAMAAAAFAAMAAAAXAAUAAAABAAIAAAAXAAQAAAABAAEAAAAXAAMAAAABAAAAAAAWAAUAAAABAAIAAAAWAAQAAAABAAEAAAAWAAMAAAABAAAAAAAVAAUAAAABAAIAAAAVAAQAAAABAAEAAAAVAAMAAAABAAAAAAAUAAUAAAABAAIAAAAUAAQAAAABAAEAAAAUAAMAAAABAAAAAAATAAUAAAAAAAIAAAATAAQAAAAAAAEAAAATAAMAAAAAAAAAAAAfAAIAAAACAAEAAAAfAAEAAAACAAEAAAAfAAAAAAACAAAAAAAeAAIAAAABAAEAAAAeAAEAAAABAAEAAAAeAAAAAAABAAAAAAAdAAIAAAABAAEAAAAdAAEAAAABAAEAAAAdAAAAAAABAAAAAAAcAAIAAAABAAEAAAAcAAEAAAABAAEAAAAcAAAAAAABAAAAAAAbAAIAAAABAAEAAAAbAAEAAAABAAEAAAAbAAAAAAABAAAAAAAaAAIAAAABAAEAAAAaAAEAAAABAAEAAAAaAAAAAAABAAAAAAAZAAIAAAABAAEAAAAZAAEAAAABAAEAAAAZAAAAAAABAAAAAAAYAAIAAAAAAAEAAAAYAAEAAAAAAAEAAAAYAAAAAAAAAAAAAAAgAAgAAAACAAIAAAAgAAcAAAAEAAIAAAAgAAYAAAABAAAAAAAfAAgAAAABAAIAAAAfAAcAAAABAAEAAAAfAAYAAAAEAAMAAAAeAAgAAAABAAIAAAAeAAcAAAABAAEAAAAeAAYAAAABAAEAAAAdAAgAAAABAAIAAAAdAAcAAAABAAEAAAAdAAYAAAABAAEAAAAcAAgAAAABAAIAAAAcAAcAAAABAAEAAAAcAAYAAAABAAEAAAAbAAgAAAABAAIAAAAbAAcAAAABAAEAAAAbAAYAAAABAAEAAAAaAAgAAAABAAIAAAAaAAcAAAABAAEAAAAaAAYAAAABAAEAAAAZAAgAAAAAAAIAAAAZAAcAAAAAAAEAAAAZAAYAAAAAAAEAAAAkAAcAAAABAAIAAAAkAAYAAAABAAAAAAAjAAcAAAABAAIAAAAjAAYAAAABAAAAAAAiAAcAAAABAAIAAAAiAAYAAAABAAAAAAAhAAcAAAABAAIAAAAhAAYAAAABAAAAAAAmAAcAAAAFAAIAAAAmAAYAAAAFAAMAAAAlAAcAAAABAAIAAAAlAAYAAAABAAAAAAAoAAcAAAACAAEAAAAoAAYAAAAEAAIAAAAnAAcAAAABAAEAAAAnAAYAAAABAAEAAAAsAAYAAAACAAIAAAArAAYAAAABAAIAAAAqAAYAAAABAAIAAAApAAYAAAABAAIAAAAoAAUAAAAEAAMAAAAoAAQAAAACAAAAAAAnAAUAAAABAAEAAAAnAAQAAAABAAAAAAAmAAUAAAAAAAEAAAAmAAQAAAAAAAAAAAAoAAkAAAACAAIAAAAoAAgAAAACAAEAAAAnAAkAAAABAAIAAAAnAAgAAAABAAEAAAAmAAkAAAAAAAIAAAAmAAgAAAAAAAEAAAAsAAUAAAACAAAAAAArAAUAAAABAAAAAAAqAAUAAAABAAAAAAApAAUAAAABAAAAAAAzAAcAAAABAAIAAAAzAAYAAAABAAEAAAAzAAUAAAABAAAAAAAyAAcAAAABAAIAAAAyAAYAAAABAAEAAAAyAAUAAAABAAAAAAAxAAcAAAABAAIAAAAxAAYAAAABAAEAAAAxAAUAAAABAAAAAAAwAAcAAAABAAIAAAAwAAYAAAABAAEAAAAwAAUAAAABAAAAAAAvAAcAAAAAAAIAAAAvAAYAAAAAAAEAAAAvAAUAAAAAAAAAAAA1AAYAAAAEAAMAAAA0AAYAAAABAAEAAAA3AAYAAAACAAAAAAA2AAYAAAABAAAAAAA3AAcAAAACAAIAAAA2AAcAAAABAAIAAAA1AAcAAAABAAIAAAA0AAcAAAABAAIAAAA0AAUAAAABAAAAAAA1AAUAAAACAAAAAAA=")
tile_set = ExtResource("2_p5284")
metadata/_edit_lock_ = true

[node name="HideoutArea2D" parent="MapRoot" instance=ExtResource("3_46036")]
position = Vector2(768, 85)

[node name="Interactables" type="Node2D" parent="MapRoot"]

[node name="CookiesStashes" type="Node2D" parent="MapRoot"]
metadata/_edit_lock_ = true

[node name="SecurityDevices" type="Node2D" parent="MapRoot"]
metadata/_edit_lock_ = true

[node name="Guards" type="Node2D" parent="MapRoot"]
metadata/_edit_lock_ = true

[node name="Player" parent="MapRoot" instance=ExtResource("2_63c5o")]
unique_name_in_owner = true
position = Vector2(384, 72)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="MapRoot/Player"]
unique_name_in_owner = true

[node name="UiCanvasLayer" type="CanvasLayer" parent="."]

[node name="TopLeftContainer" type="VBoxContainer" parent="UiCanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="CookiesLabel" type="Label" parent="UiCanvasLayer/TopLeftContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cookies: 00/01"
label_settings = SubResource("LabelSettings_ew5uy")

[node name="TimeLabel" type="Label" parent="UiCanvasLayer/TopLeftContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Time: 00:00:00"
label_settings = SubResource("LabelSettings_ew5uy")

[node name="LevelCompletePanel" type="PanelContainer" parent="UiCanvasLayer"]
unique_name_in_owner = true
process_mode = 3
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.5
offset_top = -20.0
offset_right = 58.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UiCanvasLayer/LevelCompletePanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="UiCanvasLayer/LevelCompletePanel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="UiCanvasLayer/LevelCompletePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level complete!"
label_settings = SubResource("LabelSettings_63c5o")

[node name="HBoxContainer" type="HBoxContainer" parent="UiCanvasLayer/LevelCompletePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="RetryLevelButton" type="Button" parent="UiCanvasLayer/LevelCompletePanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "retry Level"

[node name="NextLevelButton2" type="Button" parent="UiCanvasLayer/LevelCompletePanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "next Level"

[node name="TimeoutPanel" type="PanelContainer" parent="UiCanvasLayer"]
unique_name_in_owner = true
process_mode = 3
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.5
offset_top = -20.0
offset_right = 58.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UiCanvasLayer/TimeoutPanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="UiCanvasLayer/TimeoutPanel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UiCanvasLayer/TimeoutPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level Timeout!"
label_settings = SubResource("LabelSettings_satuh")

[node name="RetryLevelButton" type="Button" parent="UiCanvasLayer/TimeoutPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "retry Level"

[node name="CookieLootPanel" parent="UiCanvasLayer" instance=ExtResource("3_63c5o")]
unique_name_in_owner = true
visible = false
offset_left = -532.0
offset_right = 286.0

[node name="InventoryPanel" parent="UiCanvasLayer" instance=ExtResource("4_satuh")]
unique_name_in_owner = true
visible = false
offset_left = -588.0

[connection signal="timeout" from="LevelTimer" to="." method="_on_level_timer_timeout"]
[connection signal="pressed" from="UiCanvasLayer/LevelCompletePanel/MarginContainer/VBoxContainer/HBoxContainer/RetryLevelButton" to="." method="_on_retry_level_button_pressed"]
[connection signal="pressed" from="UiCanvasLayer/LevelCompletePanel/MarginContainer/VBoxContainer/HBoxContainer/NextLevelButton2" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="UiCanvasLayer/TimeoutPanel/MarginContainer/VBoxContainer/RetryLevelButton" to="." method="_on_retry_level_button_pressed"]
[connection signal="cookie_collected" from="UiCanvasLayer/CookieLootPanel" to="." method="_on_cookie_loot_panel_cookie_collected"]
[connection signal="finish_looting" from="UiCanvasLayer/CookieLootPanel" to="." method="_on_cookie_loot_panel_finish_looting"]
